--- a/style.css
+++ b/style.css
@@ -76,12 +76,12 @@
 }
 
 ::-webkit-scrollbar {
-    width: 0.2rem;
-    background: var(--github);
+    width: 0.1rem;
+    background: var(--gradient-bg);
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--instagram);
+    background: var(--gradient-glass);
     border-radius: 16px;
 }
 
@@ -146,13 +146,19 @@ h3 {
     background: var(--txt-gradient);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    padding: 1rem 0;
 }
 
 .about-txt {
     font: normal 200 1rem/1.2rem var(--pop);
     text-align: justify;
-    padding: 1rem 0;
     color: var(--txt-clr);
+}
+
+
+.project-link {
+    text-decoration: none;
+    font-size: 1rem !important;
 }
 
 /* HEADER */
@@ -241,6 +247,23 @@ main {
 }
 
 
+.project-container {
+    gap: 5rem;
+}
+
+.slider {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1rem;
+    overflow-x: scroll;
+}
+
+.card {
+    display: grid;
+    gap: 1rem;
+    padding: 0 0.5rem 1rem;
+}
+
 /* ICONS */
 .social-link {
     text-decoration: none;
@@ -294,7 +317,8 @@ main {
 }
 
 /* BUTTONS */
-.resume-btn {
+.resume-btn,
+.project-link {
     background: var(--gradient-glass);
     border: none;
     font: normal 200 1.2rem/1.5rem var(--mont);
@@ -305,7 +329,8 @@ main {
     transition: 300ms;
 }
 
-.resume-btn:hover {
+.resume-btn:hover,
+.project-link:hover {
     background: var(--btn-hvr-clr);
     border-radius: 0;
 }
@@ -318,6 +343,11 @@ main {
 .banner-img {
     display: none;
 }
+
+.project-img {
+    width: 10rem;
+}
+
 
 @media screen and (max-width: 600px) {
     .hero-img {
