--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --gradient-bg: linear-gradient(90deg, #EC6EE6 0%, #000428 0.01%, #004e92 100%);
     --gradient-glass: linear-gradient(0deg, #ffffff0a, #ffffff0a), linear-gradient(179.48deg, #4517fc1f 15.64%, #1ce47814 53.99%, #42a9711d 99.88%);
     --txt-gradient: -webkit-linear-gradient(#E1306C, #cb9ad4);
+    --form-bg: #d9d9d933;
     --btn-clr: #ffffff38;
     --btn-hvr-clr: #02062e;
     --github: #6800FF;
@@ -17,6 +18,7 @@
     --icon-clr: #699BF7;
     --txt-clr: #fff;
     --heading-clr: #ffff00;
+    --dark: #333333;
 }
 
 /* DESIGN SYSTEM CLASSES */
@@ -52,6 +54,9 @@
     justify-content: space-around;
 }
 
+.grid {
+    display: grid;
+}
 
 /* GLOBAL */
 
@@ -149,7 +154,7 @@ h3 {
     padding: 1rem 0;
 }
 
-.about-txt {
+.txt {
     font: normal 200 1rem/1.2rem var(--pop);
     text-align: justify;
     color: var(--txt-clr);
@@ -264,6 +269,55 @@ main {
     padding: 0 0.5rem 1rem;
 }
 
+@media screen and (min-width: 600px) {
+    .footer {
+        width: 50%;
+        gap: 2rem;
+    }
+}
+
+/* form */
+
+form {
+    margin: auto;
+    padding: 1rem 0.5rem;
+    background: var(--form-bg);
+    border-radius: 8px;
+    gap: 1rem;
+    text-align: center;
+    min-width: 30%;
+}
+
+@media screen and (min-width: 600px) {
+    form {
+        height: 50vh;
+    }
+}
+
+.input-container {
+    gap: 0.5rem;
+}
+
+input[type="text"] {
+    padding: 0.2rem 0.5rem;
+    background-color: var(--dark);
+    caret-color: var(--instagram);
+    outline: none;
+    border: none;
+    color: var(--txt-clr);
+    font: normal 200 0.8rem/1.2rem var(--mont);
+}
+
+::placeholder {
+    color: var(--heading-clr);
+    font: normal 200 0.8rem/1.2rem var(--mont);
+}
+
+input[type="text"]:focus {
+    background: var(--form-bg);
+}
+
+
 /* ICONS */
 .social-link {
     text-decoration: none;
@@ -334,6 +388,24 @@ main {
     background: var(--btn-hvr-clr);
     border-radius: 0;
 }
+
+.send-btn {
+    margin: auto;
+    border: none;
+    outline: none;
+    background: var(--dark);
+    padding: 0.5rem 1rem;
+    color: var(--txt-clr);
+    font: normal 100 1rem/1rem var(--mont);
+}
+
+.send-btn:hover {
+    cursor: pointer;
+    background: var(--btn-hvr-clr);
+    color: var(--heading-clr);
+    transition: 300ms;
+}
+
 
 /* IMAGES */
 .hero-img {
