--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ nav ul li:hover {
 
 @media screen and (max-width: 600px) {
     nav {
-        opacity: 0;
+        display: none;
         transition: 1s;
     }
 
@@ -538,8 +538,18 @@ input[type="text"]:focus {
 }
 
 #nav-toggle:checked~nav {
-    opacity: 1;
-    transition: 1s;
+    display: block;
+    animation: fade 1s;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 @media screen and (min-width: 600px) {
